add self-contained Dockerfile image build and a docker-compose